sec: implemented /auth/access-token
closes https://github.com/KuramaSyu/WerSu/issues/50
