# src/docs/swagger.json
@@ -250,6 +250,47 @@
                 }
             }
         },
+        "/auth/token": {
+            "get": {
+                "description": "Generates a new JWT access token for the user authenticated via a session cookie.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Get a new access token",
+                "responses": {
+                    "200": {
+                        "description": "Successfully generated and returned access token",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.GetAccessTokenReply"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized - User is not authenticated via session",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error - Failed to generate JWT or other server-side issue",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/directories": {
             "get": {
                 "description": "Fetch directories via gRPC service",
@@ -1442,6 +1483,14 @@
                     "items": {
                         "$ref": "#/definitions/controllers.PermissionRelationshipReply"
                     }
+                }
+            }
+        },
+        "controllers.GetAccessTokenReply": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
                 }
             }
         },
